bases/floci-az/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: floci-az
  ports:
    - protocol: TCP
      port: 4577
      targetPort: api-port
